syntax = "proto3";

option go_package = "github.com/vantoan19/Petifies/proto/user-service/v1";

import "common/common.proto";
import "validate/validate.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

enum MediaType {
    MEDIA_TYPE_UNKNOWN = 0;
    MEDIA_TYPE_IMAGE = 1;
    MEDIA_TYPE_VIDEO = 2;
    MEDIA_TYPE_AUDIO = 3;
    MEDIA_TYPE_DOCUMENT = 4;
}

message FileMetadata {
    string file_name = 1;
    MediaType media_type = 2;
    string uploader_id = 3;
    uint64 size = 4;
    uint32 width = 5;
    uint32 height = 6;
    google.protobuf.Duration duration = 7;
}

message UploadFileRequest {
    oneof data {
        FileMetadata metadata = 1;
        bytes chunk_data = 2;
    }
}

message UploadFileResponse {
    string uri = 1;
    uint64 size = 2;
}

service MediaService {
    rpc UploadFile(stream UploadFileRequest) returns (UploadFileResponse ) {}
}